# libgeohex

./: .editorconfig  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  ci.sh
.devcontainer/: devcontainer.json
.devcontainer/local/: devcontainer.json
.github/workflows/: ci.yaml
include/geohex/: geohex.h
src/: geohex.c
tests/: CMakeLists.txt  code2hex_data.h  geohex_private.h  json_data.h  test_geohex.c
